# vrp-road-network-optimization

./: .gitignore  LICENSE  README.md  debug.lp  debug.mps  pyproject.toml  requirements.txt  start.sh
.claude/: settings.local.json
api/: main.py  pipeline.py
app/: streamlit_app.py
archive/notebooks/: 001_osm_prefecture_network_check.py
config/: default.yaml
data/: README.md
data/processed/: delivery_destination_master.json  geocode_failures_delivery.csv
data/raw/: delivery_transaction.csv  delivery_transaction_100.csv  delivery_transaction_1000.csv  depot_master.csv  time_slot_master.csv
docs/: 00_problem_definition.md
docs/assumptions/: modeling_assumptions.md
docs/brainstorming/: 001_osm_network_feasibility_validation_plan.md  001_osm_prefecture_preload_architecture_v1.md
docs/data_dictionary/: customer_schema.md  distance_matrix_schema.md  network_schema.md  vehicle_schema.md
docs/decision_log/: 001_network_data_source.md  002_solver_selection.md.pages
docs/design/: 00_problem_definition.md  01_business_requirements.md  02_data_definition.md  03_network_design.md  04_math_model.md  05_algorithm_design.md  06_experiment_design.md  07_implementation_findings.md  08_demand_forecast_design.md
docs/feasibility/: 01_osm_network_feasibility.pages
docs/results/:  02_performance_analysis.md  (+2 more)
notebooks/: 001_osm_network_feasibility_validation_plan.ipynb  001_osm_prefecture_network_check.ipynb  002_prefecture_batch_network_check.ipynb  002_solver_time_limit_comparison.ipynb  003_solver_library_comparison.ipynb
scripts/: generate_gas_input.py
(+241 files in other folders)
