[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vrp-road-network-optimization"
version = "0.1.0"
description = "VRP PoC using real road networks based on OpenStreetMap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "osmnx>=2.1.0",
    "networkx>=3.2",
    "ortools>=9.14",
    "pandas>=2.1",
    "numpy>=1.26",
    "geopandas>=1.1",
    "shapely>=2.1",
    "folium>=0.17",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "requests>=2.31",
    "japanize-matplotlib>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "types-requests>=2.31",
]

[project.scripts]
vrp = "vrp_optimization.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vrp_optimization"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
